# dataclass-cli

./: .flake8  .gitignore  .pre-commit-config.yaml  ALL_FEATURES_SUMMARY.md  CHANGELOG.md  CI_FIXES_SUMMARY.md  COMPETITOR_ANALYSIS.md  CONTRIBUTING.md  LICENSE  Makefile  QUICKSTART.md  README.md  ci_check.py  pyproject.toml  test_ci_environment.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: dependencies.yml  docs.yml  examples.yml  lint.yml  publish.yml  quality.yml  release.yml  status.yml  test.yml
dataclass_args/: __init__.py  builder.py  utils.py
dataclass_cli/: __init__.py  annotations.py  builder.py  exceptions.py  file_loading.py  utils.py
dataclass_config/: __init__.py  annotations.py  builder.py  utils.py
docs/: API.md  COVERAGE.md
examples/: advanced_example.py  all_features_example.py  basic_example.py  boolean_flags_example.py  cli_choices_example.py  cli_short_example.py  positional_example.py  server_config.yaml
examples/prompts/: server_prompt.txt
scripts/: coverage_report.sh
tests/: test_annotations.py  test_basic.py  test_boolean_flags.py  test_builder_advanced.py  test_cli_choices.py  test_cli_short.py  test_combine_annotations.py  test_file_loading.py  test_positional.py  test_utils.py
