[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataclass-cli"
version = "0.1.0"
description = "Zero-boilerplate CLI generation from Python dataclasses with advanced type support and file loading"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "bassmanitram", email = "bassmanitram@users.noreply.github.com"},
]
keywords = [
    "cli",
    "dataclass",
    "argparse",
    "configuration",
    "command-line",
    "type-safe",
    "validation",
    "file-loading",
    "config-merging"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "typing-extensions>=4.0.0",  # Better type support for older Python versions
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "flake8>=6.0.0",
    "bandit>=1.7.0",
    "types-PyYAML>=6.0.0",
]
yaml = [
    "PyYAML>=6.0",
]
toml = [
    "tomli>=2.0.0;python_version<'3.11'",
    "tomli-w>=1.0.0;python_version>='3.11'",
]
validation = [
    "pydantic>=2.0",
]
all = [
    "dataclass-cli[yaml,toml,validation]",
]

[project.urls]
Homepage = "https://github.com/bassmanitram/dataclass-cli"
Repository = "https://github.com/bassmanitram/dataclass-cli"
Documentation = "https://github.com/bassmanitram/dataclass-cli#readme"
Issues = "https://github.com/bassmanitram/dataclass-cli/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["dataclass_cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests that test individual components in isolation",
    "integration: Integration tests that test component interactions",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["dataclass_cli"]

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = false

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503", "F401", "F541"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
]

[tool.bandit]
exclude_dirs = ["tests", "examples"]
skips = ["B101"]  # Skip assert_used test